Fixed spacing of Computer Science logo.

--- a/static/css/added.css
+++ b/static/css/added.css
@@ -80,8 +80,8 @@ section#sponsors div.company-logo img {
 	margin: 0 auto; }
 section#sponsors div.company-logo img.microsoft-logo {
   max-height: 8rem; }
-section#sponsors div.company-logo img.capitalone-logo {
-  max-height: 8rem; }
+section#sponsors div.company-logo img.bucs-logo {
+  max-height: 10rem; }
 
 section#organizers {
 	margin-top: -10rem;
